Fix title display on collapsed kanban column

--- a/axelor-front/src/views/kanban/kanban-board.module.scss
+++ b/axelor-front/src/views/kanban/kanban-board.module.scss
@@ -43,7 +43,7 @@
 }
 
 .collapsed-column-title {
-  writing-mode: sideways-rl;
+  writing-mode: vertical-lr;
   margin-top: 10px;
 }
 
